<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.baby.android.kalert.Main2Activity"
    android:orientation="vertical">

    <!-- how I made a solid line -->
    <View
        android:id="@+id/lineOne"
        android:layout_width="170dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_orange_dark" />

    <!-- The name of my app -->
    <TextView
        android:id="@+id/head"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="45dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/kalert" />

    <!-- how I made a solid line -->
    <View
        android:id="@+id/line"
        android:layout_width="170dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@android:color/holo_orange_dark" />

    <View
        android:id="@+id/lineeOnee"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#E0F7FA" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:text="@string/pot"/>

    <View
        android:id="@+id/lineeOne"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:background="#E0F7FA" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/que"
        android:layout_marginTop="20dp"/>

    <!-- the beginning of my radio buttons -->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quee"
        android:layout_marginTop="20dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/justNow"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notNow"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/tapMe"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:layout_marginTop="20dp"/>

        <!-- location icon -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/location"/>


    </LinearLayout>


    <!-- next button -->
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"
        />

</LinearLayout>
